# steamworks

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README  README.FreeBSD  README.IDE  README.Linux  TODO
LICENSE.dir/: LICENSE  LICENSE.SteamWorks
cmake/: CheckC99Flags.cmake  CheckCXX11Flags.cmake  CheckQSortR.cmake  ConfigVersion.cmake.in  FindFCGI.cmake  FindLog4cpp.cmake  FindOpenLDAP.cmake  FindQSort.cmake  check_qsort_r.c
contrib/cmake/: SteamworksConfig.cmake.in
contrib/pkgconfig/: Steamworks.pc.in
docs/: Makefile  README  crank.md  ldap-unbound.md  pulley.md  pulleyback-api.md
docs/notes/: notes-20150826.md  notes-20151003.md  notes-2016-0621.md  notes-20160306.md  notes-20160715.md
docs/pulleyscript/: analysis.tex  concepts.md  squeal-backend.md
docs/pulleyscript/img/: network0-varoverlap.graphml  network1-generate.graphml  network2-varparts.graphml  network3-drivers-w1.graphml  network3-drivers-w2.graphml  network3-drivers.graphml  network4-varsneeded-w1.graphml  network4-varsneeded-w2.graphml  network4-varsneeded.graphml  network5-gensneeded-w1.graphml  network5-gensneeded.graphml  network6-combined.graphml
docs/rfc/: README  rfc4510.txt  rfc4511.txt  rfc4512.txt  rfc4513.txt  rfc4514.txt  rfc4515.txt  rfc4516.txt  rfc4517.txt  rfc4518.txt  rfc4519.txt  rfc4520.txt  rfc4521.txt  rfc4522.txt  rfc4523.txt  rfc4524.txt  rfc4525.txt  rfc4526.txt  rfc4527.txt  rfc4528.txt  rfc4529.txt  rfc4530.txt  rfc4531.txt  rfc4532.txt  rfc4533.txt
packaging/: README
packaging/FreeBSD/: Makefile  distinfo  pkg-descr  pkg-plist
src/: CMakeLists.txt
src/common/: CMakeLists.txt  README  fcgi.cpp  fcgi.h  jsoniterator.h  jsonresponse.cpp  jsonresponse.h  ldapcpp.cpp  ldapcpp.h  logger.cpp  logger.h  verb.cpp  verb.h
src/common/swldap/: README  connection.cpp  connection.h  ldapcpp.cpp  private.cpp  private.h  search.cpp  search.h  serverinfo.cpp  serverinfo.h  sync.cpp  sync.h  update.cpp  update.h
src/crank/: CMakeLists.txt  README  crank.cpp  crank.h  crank.properties.sample  main.cpp
src/crank/examples/: Makefile  README  json-connect-auth  json-search  json-search-all  json-serverstatus  json-stop  json-typeinfo  json-update  json-update1  ldif-add-persons  ldif-add-pkcs11  ldif-remove-persons  ldif-tlspool-trust  ldif-tlspool-update0  ldif-tlspool-update1  ldif-update-persons0  ldif-update-persons1  ldif-update-persons2  ldif-update0  ldif-update1
src/crank/examples/schema/: README  arpa2-tlspool.schema
src/crank/frontend/: steamworks-nginx.conf
src/frontend/: Makefile  steamworks-crank.conf
src/frontend/webroot/crank/: index.html
src/frontend/webroot/crank/app/: crank.js
src/frontend/webroot/crank/app/certificate/: crank-certificate-list.component.js  crank-certificate-list.template.html
src/frontend/webroot/crank/app/issuer/: crank-issuer-add.component.js  crank-issuer-add.template.html  crank-issuer-list.component.js  crank-issuer-list.template.html  crank-issuer-remove.component.js  crank-issuer-remove.template.html  crank-issuer-view.component.js  crank-issuer-view.template.html
src/frontend/webroot/crank/app/status/: crank-status.component.js  crank-status.template.html
src/frontend/webroot/crank/css/: crank.css
src/frontend/webroot/crank/js/: crank-certificate-list.component.js  crank-status.component.js  crank.js
src/frontend/webroot/crank/tmpl/: crank-certificate-list.template.html  crank-status.template.html
src/pulley/: CMakeLists.txt  README  backend.cpp  backend.h  main.cpp  pulley.cpp  pulley.h  pulleyback.h  pulleyback_test.cpp
src/pulley/examples/: Makefile  README  json-dump  json-follow0  json-follow1  json-follow2  json-resync  json-script  json-script0  json-serverinfo  json-unfollow  null.ply  pulley.properties
src/pulley/pulleyback/: CMakeLists.txt  README.md  null.c
src/pulley/pulleyscript/: CMakeLists.txt  Makefile  README  TODO  api-driver.md  backend.cpp  backend.h  binding.h  bindingpp.cpp  bindingpp.h  bitset.c  bitset.h  compiler.c  condition.c  condition.h  demo.ply  dlfunc.c  dlfunc.h  driver.c  driver.h  generator.c  generator.h  generator_int.h  lexhash.c  lexhash.h  logger.c  parser.h  parserpp.cpp  parserpp.h  path_schedule.md  pulley.lex  pulley.yacc  qsort_fix.h  resist.c  resist.h  simple.c  simple.cpp  squeal.c  squeal.h  types.h  (+3 more)
src/pulley/pulleyscript/tests/: empty-lines.ply  intuition-example.ply  syntactical-sandbox.ply  tlspool-add.json  tlspool-issuers.ply
src/shaft/: CMakeLists.txt  README  main.cpp  shaft.cpp  shaft.h
src/shaft/examples/: Makefile  README  json-connect  json-downstream  json-upstream  shaft.properties
